@@ -1,5 +1,10 @@
 2014-02-05  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>
 
+	* gcc.dg/vmx/sum2s.c: New.
+	* gcc.dg/vmx/sum2s-be-order.c: New.
+
+2014-02-05  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>
+
 	* gcc.dg/vmx/pack.c: New.
 	* gcc.dg/vmx/pack-be-order.c: New.
 	* gcc.dg/vmx/unpack.c: New.
